fixed input spacing issue for contact form

--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -50,6 +50,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
+                gap: 0.5rem;
 
                 div.Input {
                     flex: 0 0 250px;
